; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_DelWaitThread.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_DelWaitThread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WaitThreadList = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DelWaitThread(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp eq i32* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %19

6:                                                ; preds = %1
  %7 = load i32, i32* @WaitThreadList, align 4
  %8 = call i32 @LockList(i32 %7)
  %9 = load i32, i32* @WaitThreadList, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = call i64 @Delete(i32 %9, i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %6
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @ReleaseThread(i32* %14)
  br label %16

16:                                               ; preds = %13, %6
  %17 = load i32, i32* @WaitThreadList, align 4
  %18 = call i32 @UnlockList(i32 %17)
  br label %19

19:                                               ; preds = %16, %5
  ret void
}

declare dso_local i32 @LockList(i32) #1

declare dso_local i64 @Delete(i32, i32*) #1

declare dso_local i32 @ReleaseThread(i32*) #1

declare dso_local i32 @UnlockList(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
